<resources>
    <string name="app_name">Movie Base</string>
    <string name="action_settings">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular Movies</string>
    <string name="pref_highest_rated">Highest Rated Movies</string>
    <string name="pref_new_movies">New Movies in Theaters </string>
    <string name="pref_coming_soon">Coming Soon Movies </string>
    <string name="trailer">Movie Trailers</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>