<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/viewBg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.masterproject.jinet.moviedata.DetailActivity"
    tools:showIn="@layout/activity_detail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ad">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_detail">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/movietitle"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/name_movie"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                tools:layout_constraintTop_creator="1"
                tools:layout_constraintLeft_creator="1"/>
            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:textAlignment="center"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                android:layout_below="@+id/movietitle"
                app:layout_constraintTop_toBottomOf="@+id/movietitle"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_constraintTop_creator="1"/>
            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/plot"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/plot"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/layout_margin_left" />
            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/plotsynopsis"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:textAlignment="center"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/plot"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/layout_margin_left" />
            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/rating"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/plotsynopsis"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/layout_margin_left" />
            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/userrating"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:textAlignment="center"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/rating"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/layout_margin_left" />
            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/release"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/release"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/userrating"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/layout_margin_left" />
            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/releasedate"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:textAlignment="center"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/release"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/layout_margin_left" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/thumbnailUrl"
                android:visibility="invisible"
                tools:layout_editor_absoluteY="525dp"
                tools:layout_editor_absoluteX="8dp" />
            <TextView
                android:id="@+id/trailer"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:text="@string/trailer"
                app:layout_constraintTop_toBottomOf="@+id/releasedate"
                app:layout_constraintLeft_toLeftOf="parent" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view1"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@+id/trailer"
                app:layout_constraintLeft_toLeftOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    </LinearLayout>
</RelativeLayout>